--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.flx {
+  width: 63%;
+  margin: auto;
+  display: flex;
+  height: 50vh;
+  flex-wrap: wrap;
+  /* border: 2px solid brown; */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.slip{
+  width: 39%;
+  margin-top: 10px;
+  margin-inline: 5%;
+  /* border: 2px solid red; */
+}
+
+.roww {
+  margin-top: 4px;
+  margin-bottom: 4px;
+  font-weight: 1000;
+  font-size: 13px;
+  font-family:  Arial, Helvetica, sans-serif;
 }
