--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,34 @@
+body{
+  margin: 0%;
+  padding: 0%;
+}
 .flx {
-  width: 63%;
+  width: 818px;
   margin: auto;
   display: flex;
-  height: 50vh;
+  /* height: 1390px; */
   flex-wrap: wrap;
-  /* border: 2px solid brown; */
+}
+/* 215 - 60 = 155 */
+.slip{
+  width: 386px;
+  height: 181.2px; 
+  display: flex;
+  flex-direction: column;
+  margin-inline:auto;
+  padding-top: 22px;
+  padding-bottom: 22px;
 }
 
-.slip{
-  width: 39%;
-  margin-top: 10px;
-  margin-inline: 5%;
-  /* border: 2px solid red; */
-}
+/* 0.157 cm rl , 0.256cm tb */
 
 .roww {
-  margin-top: 4px;
-  margin-bottom: 4px;
+  margin-top: auto;
+  margin-bottom: auto;
+  height: 20px;
+  display: flex;
+  flex-direction: row;
   font-weight: 1000;
-  font-size: 13px;
+  font-size: 15px;
   font-family:  Arial, Helvetica, sans-serif;
 }
