--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@
   width: 50%;
 }
 
+.roww{
+  font-size: 13px;
+}
 
 .row {
   display: flex;
@@ -13,6 +16,6 @@
 }
 
 .labell {
-  font-size:medium;
+  /* font-size:medium; */
   color: black;
 }
