--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@ body{
   /* height: 1390px; */
   flex-wrap: wrap;
 }
+.fslarge {
+  font-size: 18px !important ;
+}
 /* 215 - 60 = 155 */
 .slip{
   width: 386px;
@@ -18,6 +21,7 @@ body{
   margin-inline:auto;
   padding-top: 22px;
   padding-bottom: 22px;
+  /* border: 2px solid firebrick; */
 }
 
 /* 0.157 cm rl , 0.256cm tb */
@@ -31,4 +35,8 @@ body{
   font-weight: 1000;
   font-size: 15px;
   font-family:  Arial, Helvetica, sans-serif;
+}
+
+.text-center {
+  margin-left: 10%;
 }
